fix: Add canonical tags to resolve Google Search Console duplicate content errors
- Added canonical tags to runner, snake, tictactoe games and privacy policy pages
- Set canonical URLs to use non-www version (jadaru.co) for consistency
- Fixes 'Duplicate without user-selected canonical' errors in Google Search Console

--- a/games/tictactoe/index.html
+++ b/games/tictactoe/index.html
@@ -5,8 +5,9 @@
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-  <meta name="theme-color" content="#121212"><title>Tic Tac Toe - Jadaru Games</title>
+  <meta name="theme-color" content="#121212">  <title>Tic Tac Toe - Jadaru Games</title>
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="canonical" href="https://jadaru.co/games/tictactoe/" />
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="/css/style.css">
   <!-- Google tag (gtag.js) -->
