--- a/games/snake/index.html
+++ b/games/snake/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Snake Game - Babylon.js</title>
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
+  <link rel="canonical" href="https://jadaru.co/games/snake/" />
   <link rel="stylesheet" href="styles/main.css">
   <link rel="stylesheet" href="/css/style.css">
   <!-- Google tag (gtag.js) -->
